Return to class ArrayList response userDTO in controller